<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint"
        app:layout_constraintDimensionRatio="w,1:1">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="@id/mapCircle"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/mapCircle"
            app:layout_constraintRight_toRightOf="@id/mapCircle"
            app:layout_constraintTop_toTopOf="@id/mapCircle"
            tools:context=".activity.MapsActivity"
            tools:layout="@layout/support_simple_spinner_dropdown_item" />

        <ImageView
            android:id="@+id/mapCircle"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/circle_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/compass"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/compass2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/mock_button"
            android:layout_width="65dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="19dp"
            android:contentDescription="@null"
            android:onClick="onClickMock"
            android:text="OK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mock_degrees"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/center"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:onClick="onClickCenter"
            android:text="Center"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mock_degrees"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/delete"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:layout_marginStart="298dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="83dp"
            android:backgroundTint="#FF6A6A"
            android:contentDescription="@null"
            android:onClick="onClickDBDelete"
            android:text="Delete ALL"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mock_degrees"
            android:layout_width="81dp"
            android:layout_height="52dp"
            android:layout_marginStart="111dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="19dp"
            android:contentDescription="@null"
            android:hint="0-359"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mock_button"
            app:layout_constraintStart_toEndOf="@+id/center"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/addLocation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="-"
            android:background="@drawable/baseline_add_box_24"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.848" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>